load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "access_control_list.go",
        "acl_entries_type.go",
        "action_list_type.go",
        "address_families.go",
        "address_group.go",
        "address_type.go",
        "alarm.go",
        "alarm_or_list.go",
        "alias_ip.go",
        "alias_ip_pool.go",
        "allocation_pool_type.go",
        "allowed_address_pair.go",
        "allowed_address_pairs.go",
        "analytics_alarm_node.go",
        "analytics_node.go",
        "analytics_snmp_node.go",
        "api_access_list.go",
        "application_policy_set.go",
        "asn_range_type.go",
        "attachment_address_type.go",
        "attachment_info_type.go",
        "authentication_data.go",
        "authentication_key_item.go",
        "autonomous_systems_type.go",
        "b_g_paa_s_control_node_zone_attributes.go",
        "b_g_paa_service_parameters_type.go",
        "baremetal_port_group_info.go",
        "baremetal_port_info.go",
        "baremetal_server_info.go",
        "bgp_as_a_service.go",
        "bgp_family_attributes.go",
        "bgp_peering_attributes.go",
        "bgp_prefix_limit.go",
        "bgp_router.go",
        "bgp_router_params.go",
        "bgp_session_attributes.go",
        "bgpvpn.go",
        "bridge_domain.go",
        "bridge_domain_membership_type.go",
        "card.go",
        "cli_config.go",
        "cli_diff_list_type.go",
        "cloud_instance_info.go",
        "community_attributes.go",
        "config_database_node.go",
        "config_node.go",
        "config_root.go",
        "connection_type.go",
        "control_node_zone.go",
        "control_traffic_dscp_type.go",
        "customer_attachment.go",
        "data_center_interconnect.go",
        "database_node.go",
        "default_protocol_type.go",
        "device_chassis.go",
        "device_credential_list.go",
        "device_family_list_type.go",
        "device_functional_group.go",
        "device_image.go",
        "device_platform_list_type.go",
        "devicemgr_node.go",
        "dhcp_option_type.go",
        "dhcp_options_list_type.go",
        "discovery_service_assignment.go",
        "discovery_service_assignment_type.go",
        "dnsmasq_lease_parameters.go",
        "domain.go",
        "domain_limits_type.go",
        "dsa_rule.go",
        "e2_service_provider.go",
        "e_s_x_i_host_info.go",
        "e_s_x_i_properties.go",
        "ecmp_hashing_include_fields.go",
        "encapsulation_priorities_type.go",
        "encryption_tunnel_endpoint_list.go",
        "executable_info_list_type.go",
        "fabric.go",
        "fabric_namespace.go",
        "fabric_network_tag.go",
        "fat_flow_protocols.go",
        "feature.go",
        "feature_config.go",
        "feature_flag.go",
        "field_names_list.go",
        "firewall_policy.go",
        "firewall_rule.go",
        "firewall_rule_endpoint_type.go",
        "firewall_rule_match_tags_type.go",
        "firewall_rule_match_tags_type_id_list.go",
        "firewall_sequence.go",
        "firewall_service_group_type.go",
        "firewall_service_type.go",
        "floating_ip.go",
        "floating_ip_pool.go",
        "floating_ip_pool_subnet_type.go",
        "flow_aging_timeout_list.go",
        "flow_node.go",
        "forwarding_class.go",
        "global_analytics_config.go",
        "global_qos_config.go",
        "global_system_config.go",
        "global_vrouter_config.go",
        "graceful_restart_parameters_type.go",
        "hardware.go",
        "hardware_inventory.go",
        "host_based_service.go",
        "id_perms_type.go",
        "instance_ip.go",
        "instance_target_type.go",
        "intent_map.go",
        "interface_map_type.go",
        "interface_route_table.go",
        "ip_addresses_type.go",
        "ipam_subnet_type.go",
        "ipam_subnets.go",
        "ipam_type.go",
        "job_template.go",
        "junos_service_ports.go",
        "key_value_pairs.go",
        "link_aggregation_group.go",
        "linklocal_services_types.go",
        "loadbalancer.go",
        "loadbalancer_healthmonitor.go",
        "loadbalancer_healthmonitor_type.go",
        "loadbalancer_listener.go",
        "loadbalancer_listener_type.go",
        "loadbalancer_member.go",
        "loadbalancer_member_type.go",
        "loadbalancer_pool.go",
        "loadbalancer_pool_type.go",
        "loadbalancer_type.go",
        "logical_interface.go",
        "logical_router.go",
        "logical_router_p_r_list_type.go",
        "logical_router_virtual_network_type.go",
        "m_a_c_limit_control_type.go",
        "m_a_c_move_limit_control_type.go",
        "mac_addresses_type.go",
        "match_condition_type.go",
        "mirror_action_type.go",
        "multicast_policy.go",
        "multicast_source_groups.go",
        "namespace.go",
        "namespace_value.go",
        "network_device_config.go",
        "network_ipam.go",
        "network_policy.go",
        "node.go",
        "node_profile.go",
        "node_profile_roles_type.go",
        "overlay_role.go",
        "peering_policy.go",
        "perm_type2.go",
        "physical_interface.go",
        "physical_role.go",
        "physical_router.go",
        "playbook_info_list_type.go",
        "plugin_properties.go",
        "policy_based_forwarding_rule_type.go",
        "policy_entries_type.go",
        "policy_management.go",
        "policy_statement_type.go",
        "port.go",
        "port_group.go",
        "port_mappings.go",
        "port_profile.go",
        "port_translation_pools.go",
        "port_tuple.go",
        "port_type.go",
        "project.go",
        "protocol_bgp_type.go",
        "protocol_ospf_type.go",
        "provider_attachment.go",
        "provider_details.go",
        "qos_config.go",
        "qos_id_forwarding_class_pairs.go",
        "qos_queue.go",
        "quota_type.go",
        "rbac_rule_entries_type.go",
        "role_config.go",
        "role_definition.go",
        "route_aggregate.go",
        "route_list_type.go",
        "route_origin_override.go",
        "route_table.go",
        "route_table_type.go",
        "route_target.go",
        "route_target_list.go",
        "route_type.go",
        "routing_bridging_roles_type.go",
        "routing_instance.go",
        "routing_policy.go",
        "routing_policy_service_instance_type.go",
        "routing_policy_type.go",
        "s_n_m_p_credentials.go",
        "security_group.go",
        "security_logging_object.go",
        "security_logging_object_rule_list_type.go",
        "sequence_type.go",
        "serial_num_list_type.go",
        "service_appliance.go",
        "service_appliance_interface_type.go",
        "service_appliance_set.go",
        "service_chain_info.go",
        "service_connection_module.go",
        "service_endpoint.go",
        "service_group.go",
        "service_health_check.go",
        "service_health_check_type.go",
        "service_instance.go",
        "service_instance_type.go",
        "service_interface_tag.go",
        "service_object.go",
        "service_template.go",
        "service_template_type.go",
        "service_virtual_network_type.go",
        "sflow_parameters.go",
        "sflow_profile.go",
        "slo_rate_type.go",
        "static_mirror_nh_type.go",
        "static_route_entries_type.go",
        "storm_control_parameters.go",
        "storm_control_profile.go",
        "structured_syslog_application_record.go",
        "structured_syslog_config.go",
        "structured_syslog_hostname_record.go",
        "structured_syslog_linkmap.go",
        "structured_syslog_message.go",
        "structured_syslog_sla_profile.go",
        "sub_cluster.go",
        "subnet.go",
        "subnet_list_type.go",
        "subnet_type.go",
        "tag.go",
        "tag_type.go",
        "telemetry_profile.go",
        "telemetry_state_info.go",
        "types.go",
        "user_credentials.go",
        "user_defined_log_stat_list.go",
        "uve_keys_type.go",
        "vendor_hardwares_type.go",
        "virtual_DNS.go",
        "virtual_DNS_record.go",
        "virtual_dns_record_type.go",
        "virtual_dns_type.go",
        "virtual_ip.go",
        "virtual_ip_type.go",
        "virtual_machine.go",
        "virtual_machine_interface.go",
        "virtual_machine_interface_properties_type.go",
        "virtual_network.go",
        "virtual_network_policy_type.go",
        "virtual_network_routed_properties_type.go",
        "virtual_network_type.go",
        "virtual_port_group.go",
        "virtual_router.go",
        "virtual_router_network_ipam_type.go",
        "vn_subnets_type.go",
        "vpg_interface_parameters_type.go",
        "vrf_assign_table_type.go",
        "webui_node.go",
    ],
    importpath = "github.com/Juniper/contrail-operator/contrail-provisioner/contrail-go-types",
    visibility = ["//visibility:public"],
    deps = ["@com_github_juniper_contrail_go_api//:go_default_library"],
)
