load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["contrailnode.go"],
    importpath = "github.com/Juniper/contrail-operator/contrail-provisioner/contrailnode",
    visibility = ["//visibility:public"],
    deps = ["//contrail-provisioner/contrailclient:go_default_library"],
)
