load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["nodemanager.go"],
    importpath = "github.com/Juniper/contrail-operator/contrail-provisioner/nodemanager",
    visibility = ["//visibility:public"],
    deps = [
        "//contrail-provisioner/analyticsnode:go_default_library",
        "//contrail-provisioner/confignode:go_default_library",
        "//contrail-provisioner/contrailclient:go_default_library",
        "//contrail-provisioner/contrailnode:go_default_library",
        "//contrail-provisioner/controlnode:go_default_library",
        "//contrail-provisioner/databasenode:go_default_library",
        "//contrail-provisioner/reconcile:go_default_library",
        "//contrail-provisioner/vrouternode:go_default_library",
        "@in_gopkg_yaml.v2//:go_default_library",
    ],
)
