load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["reconcile.go"],
    importpath = "github.com/Juniper/contrail-operator/contrail-provisioner/reconcile",
    visibility = ["//visibility:public"],
    deps = [
        "//contrail-provisioner/contrailclient:go_default_library",
        "//contrail-provisioner/contrailnode:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["reconcile_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//contrail-provisioner/contrailnode:go_default_library",
        "//contrail-provisioner/fake:go_default_library",
        "//contrail-provisioner/vrouternode:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
