load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["vrouternode.go"],
    importpath = "github.com/Juniper/contrail-operator/contrail-provisioner/vrouternode",
    visibility = ["//visibility:public"],
    deps = [
        "//contrail-provisioner/contrail-go-types:go_default_library",
        "//contrail-provisioner/contrailclient:go_default_library",
        "//contrail-provisioner/contrailnode:go_default_library",
        "@com_github_juniper_contrail_go_api//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["vrouternode_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//contrail-provisioner/contrail-go-types:go_default_library",
        "//contrail-provisioner/contrailnode:go_default_library",
        "//contrail-provisioner/fake:go_default_library",
        "@com_github_juniper_contrail_go_api//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
