load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "addtoscheme_contrail_v1alpha1.go",
        "apis.go",
    ],
    importpath = "github.com/Juniper/contrail-operator/pkg/apis",
    visibility = ["//visibility:public"],
    deps = [
        "//contrail/operator/pkg/apis/contrail/v1alpha1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
    ],
)
