load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "certificate.go",
        "sign_csr.go",
    ],
    importpath = "github.com/Juniper/contrail-operator/pkg/certificates",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/contrail/v1alpha1:go_default_library",
        "@io_k8s_api//certificates/v1beta1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
    ],
)
