load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cacertificate.go",
        "certificate.go",
        "certificate_subject.go",
        "certificate_templates.go",
        "pem.go",
        "sign_csr.go",
        "signer_ca.go",
    ],
    importpath = "github.com/Juniper/contrail-operator/pkg/certificates",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/k8s:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cacertificate_test.go",
        "certificate_subject_test.go",
        "certificates_test.go",
        "signer_ca_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/k8s:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
    ],
)
