load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_cassandra.go",
        "add_config.go",
        "add_contrailcommand.go",
        "add_control.go",
        "add_kubemanager.go",
        "add_manager.go",
        "add_rabbitmq.go",
        "add_vrouter.go",
        "add_webui.go",
        "add_zookeeper.go",
        "controller.go",
    ],
    importpath = "github.com/Juniper/contrail-operator/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//contrail/operator/pkg/controller/cassandra:go_default_library",
        "//contrail/operator/pkg/controller/config:go_default_library",
        "//contrail/operator/pkg/controller/contrailcommand:go_default_library",
        "//contrail/operator/pkg/controller/control:go_default_library",
        "//contrail/operator/pkg/controller/kubemanager:go_default_library",
        "//contrail/operator/pkg/controller/manager:go_default_library",
        "//contrail/operator/pkg/controller/rabbitmq:go_default_library",
        "//contrail/operator/pkg/controller/vrouter:go_default_library",
        "//contrail/operator/pkg/controller/webui:go_default_library",
        "//contrail/operator/pkg/controller/zookeeper:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
    ],
)
