load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_cassandra.go",
        "add_command.go",
        "add_contrailmonitor.go",
        "add_config.go",
        "add_control.go",
        "add_keystone.go",
        "add_manager.go",
        "add_memcached.go",
        "add_postgres.go",
        "add_provisionmanager.go",
        "add_rabbitmq.go",
        "add_swift.go",
        "add_swiftproxy.go",
        "add_swiftstorage.go",
        "add_webui.go",
        "add_zookeeper.go",
        "controller.go",
    ],
    importpath = "github.com/Juniper/contrail-operator/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/controller/cassandra:go_default_library",
        "//pkg/controller/command:go_default_library",
        "//pkg/controller/config:go_default_library",
        "//pkg/controller/contrailmonitor:go_default_library",
        "//pkg/controller/control:go_default_library",
        "//pkg/controller/keystone:go_default_library",
        "//pkg/controller/manager:go_default_library",
        "//pkg/controller/memcached:go_default_library",
        "//pkg/controller/postgres:go_default_library",
        "//pkg/controller/provisionmanager:go_default_library",
        "//pkg/controller/rabbitmq:go_default_library",
        "//pkg/controller/swift:go_default_library",
        "//pkg/controller/swiftproxy:go_default_library",
        "//pkg/controller/swiftstorage:go_default_library",
        "//pkg/controller/webui:go_default_library",
        "//pkg/controller/zookeeper:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
    ],
)
