load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["job.go"],
    importpath = "github.com/Juniper/contrail-operator/pkg/job",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//batch/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["job_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_k8s_api//batch/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
    ],
)
