load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cluster_info.go"],
    importpath = "github.com/Juniper/contrail-operator/pkg/openshift",
    visibility = ["//visibility:public"],
    deps = [
        "@in_gopkg_yaml.v2//:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_client_go//dynamic:go_default_library",
        "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cluster_info_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_openshift_api//config/v1:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_client_go//dynamic:go_default_library",
        "@io_k8s_client_go//dynamic/fake:go_default_library",
        "@io_k8s_client_go//kubernetes/fake:go_default_library",
        "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
    ],
)
