load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "main_test.go",
        "manager_test.go",
    ],
    local = 1,
    tags = ["manual"],
    deps = [
        "//pkg/apis:go_default_library",
        "//pkg/apis/contrail/v1alpha1:go_default_library",
        "//pkg/controller/utils:go_default_library",
        "@com_github_juniper_contrail_go_api//:go_default_library",
        "@com_github_operator_framework_operator_sdk//pkg/test:go_default_library",
        "@com_github_operator_framework_operator_sdk//pkg/test/e2eutil:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
    ],
)
