load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["scale_core_contrail_services_test.go"],
    deps = [
        "//pkg/apis/contrail/v1alpha1:go_default_library",
        "//test/e2e:go_default_library",
        "//test/logger:go_default_library",
        "//test/wait:go_default_library",
        "@com_github_operator_framework_operator_sdk//pkg/test:go_default_library",
        "@com_github_operator_framework_operator_sdk//pkg/test/e2eutil:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
    ],
)
